# remote-unlock-v2

./: PROTOCOL.md  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/remoteunlock/: MainActivity.kt  RemoteUnlockApp.kt
android/app/src/main/kotlin/com/remoteunlock/biometric/: BiometricHelper.kt
android/app/src/main/kotlin/com/remoteunlock/crypto/: KeyManager.kt  NoiseHandshake.kt
android/app/src/main/kotlin/com/remoteunlock/data/: Peer.kt  PeerStore.kt
android/app/src/main/kotlin/com/remoteunlock/qr/: QrPayload.kt  QrScanner.kt
android/app/src/main/kotlin/com/remoteunlock/tunnel/: TunnelClient.kt
android/app/src/main/kotlin/com/remoteunlock/ui/: NavHost.kt
android/app/src/main/kotlin/com/remoteunlock/ui/screens/: DevicesScreen.kt  DevicesViewModel.kt  PairScreen.kt  PairViewModel.kt
android/app/src/main/kotlin/com/remoteunlock/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
desktop/: Cargo.toml  build.rs
desktop/data/: com.remoteunlock.Desktop.flatpak.yml  com.remoteunlock.Desktop.gschema.xml  com.remoteunlock.Desktop.metainfo.xml  resources.gresource.xml  style.css
desktop/src/: app.rs  main.rs
desktop/src/crypto/: keys.rs  mod.rs  noise.rs
desktop/src/portal/: background.rs
desktop/src/qr/: generator.rs
desktop/src/server/: tunnel.rs
desktop/src/ui/: devices_page.rs  mod.rs  pair_page.rs  window.rs
desktop/src/unlock/: strategies.rs
